--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/immersegfx/cnysoftdev-meanjs-meetup",
   "dependencies": {
+    "bower": "^1.3.12",
     "express": "^4.12.2",
     "generator-meanjs": "^0.1.12",
+    "grunt-cli": "^0.1.13",
+    "gulp": "^3.8.11",
     "yo": "^1.4.6"
   }
 }
